# epub-sorter

./: .gitignore  .pre-commit-config.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile.test  GitVersion.yml  Makefile  README.md  build.ps1  cli.py  common.py  e_pub_order.py  e_pub_sorter.py  gui.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: build-release.yaml  ci.yml  enforce-feature-branch.yml  sonar.yml
.gitnexus/: meta.json
tests/: test_common.py
