[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-sorter"
version = "0.1.0"
requires-python = ">=3.14"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov-fail-under=80"

[tool.coverage.run]
source = ["common.py"]
omit = ["tests/*", "gui.py", "main.py", "cli.py", "build/*"]

[tool.coverage.report]
show_missing = true
